# strobe-game-engine

./: .clang-tidy  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  TODO.txt  [coc-explorer]-2  assets.toml  build.gradle  easy_test.cmake  imgui.ini  libraries.cmake  loc.sh  loop_test_suite.sh  pom.xml  settings.gradle  technical_term_research.txt
asset_loading/: CMakeLists.txt
asset_loading/include/strobe/: assets.h
asset_loading/lib/stb_image/: CMakeLists.txt
asset_loading/src/assets/: ImageAsset.cpp  ImageAsset.h  ShaderAsset.h  TextFileAsset.cpp  TextFileAsset.h
libs/core/: CMakeLists.txt
libs/core/containers/: CMakeLists.txt
libs/core/containers/include/strobe/: containers.hpp
libs/core/containers/test/: CMakeLists.txt  IndexPool.cpp  List.cpp  LockFreeMPSCRingBuffer.cpp  LockFreeSPSCRingBuffer.cpp  RingBuffer.cpp  example.cpp
libs/core/events/: CMakeLists.txt
libs/core/events/include/strobe/: events.hpp  keyboard_event.hpp
libs/core/events/test/: CMakeLists.txt  EventDispatcher.cpp  main.cpp
libs/core/fs/: CMakeLists.txt
libs/core/fs/test/: CMakeLists.txt  File.cpp  Path.cpp  cp.cpp  exists.cpp  main.cpp  mkdir.cpp  mv.cpp  rm.cpp  stat.cpp
libs/core/lina/: CMakeLists.txt
libs/core/lina/include/strobe/: lina.hpp
libs/core/memory/: CMakeLists.txt
libs/core/memory/include/strobe/: memory.hpp
libs/core/memory/test/: CMakeLists.txt  MonotonicPoolResource.cpp
libs/core/sync/: CMakeLists.txt
libs/core/sync/include/strobe/: sync.hpp
libs/core/sync/test/: CMakeLists.txt  LockFreeBoundedMSQueue.cpp  LockFreeMPSCRingBuffer.cpp  LockFreeSPSCRingBuffer.cpp  mpsc.cpp  spsc.cpp
logging/: CMakeLists.txt
logging/src/: log.h
opengl_render_backend/: CMakeLists.txt
opengl_render_backend/include/strobe/: renderer_backend.h
opengl_render_backend/shaders/: simple.fs.glsl
opengl_render_backend/src/: GlfwWindow.cpp  GlfwWindow.h  RenderBackend.cpp  RenderBackend.h  RenderBackendRuntime.cpp  RenderBackendRuntime.h  resource_id.h
opengl_render_backend/src/buffer/: Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h
opengl_render_backend/src/deprecated/: Buffer.cpp  Geometrie.cpp  Shader.h  ShaderProgram.h  Texture2D.cpp  UboBindingConventions.h
opengl_render_backend/src/geometrie/: Geometrie.cpp  Geometrie.h  GeometrieAttribute.cpp  GeometrieAttribute.h  GeometrieIndices.cpp  GeometrieIndices.h  GeometrieManager.cpp  GeometrieManager.h
opengl_render_backend/src/internal/: Geometrie.h  Shader.cpp  Texture2D.h  UboBindingConventions.cpp
opengl_render_backend/src/renderobj/: RenderObject.h  RenderObjectQueue.cpp  RenderObjectQueue.h
opengl_render_backend/src/shader/: ShaderProgram.h  ShaderProgramManager.h
opengl_render_backend/src/synchronization/: MemoryGuard.cpp  MemoryGuard.h
opengl_render_backend/test/test_executable/: CMakeLists.txt  main.cpp
pil/: CMakeLists.txt
pil/include/: allocators.h  containers.h  shared_memory.h  threading.h  timeutil.h
pil/src/: darray.c  darray.h  filter.h  mutex.c  mutex.h  phashtable.c  phashtable.h  pool_allocator.c  pool_allocator.h  shared_memory.c  shared_memory.h  stack_allocator.c  stack_allocator.h  thread.c  thread.h  timeutil.c  timeutil.h
pil/test/: darray_test.cpp
renderer/: CMakeLists.txt
renderer/common/: CMakeLists.txt
renderer/common/src/: render_backend.c  render_backend.h  window.h
renderer/glfw/: CMakeLists.txt
renderer/glfw/src/: glfw_window.c  glfw_window.h
renderer/include/: renderer.h
renderer/opengl-backend/: CMakeLists.txt
renderer/opengl-backend/src/: opengl_backend.c  opengl_backend.h
renderer/sandbox/: CMakeLists.txt
renderer/sandbox/src/: main.c
renderer/src/: Renderer.h  frame_barrier.c  frame_barrier.h  frame_guard.c  frame_guard.h  material.c  material.h  material_def.h  material_manager.c  material_manager.h  mesh.c  mesh.h  mesh_def.h  mesh_manager.c  mesh_manager.h  render_backend.h  render_context.c  render_context.h  render_loop.c  render_loop.h  render_thread.c  render_thread.h  renderer_submission.c  renderer_submission.h  scene.c  scene.h  scene_manager.c  scene_manager.h  scene_renderer.h  window.h
renderer/trigon/: CMakeLists.txt
renderer/trigon/include/: trigon.h
renderer/trigon/src/: buffer.c  buffer.h  instance.c  instance.h  link.c  material_manager.c  material_manager.h  mesh_manager.c  mesh_manager.h  submission.c  submission.h  trigon.c  trigon.h
renderer_opengl/: CMakeLists.txt
renderer_opengl/include/strobe/: low_level_renderer.h
renderer_opengl/lib/glad/: CMakeLists.txt
renderer_opengl/lib/glad/include/glad/: glad.h
renderer_opengl/lib/glad/src/: glad.c
renderer_opengl/src/: Window.cpp  Window.h
renderer_opengl/src/internal/: Buffer.h  Geometrie.h  IndexAttribute.cpp  IndexAttribute.h  ShaderProgram.cpp  VertexAttribute.cpp  VertexAttribute.h
renderer_opengl/test/test_executable/: CMakeLists.txt  main.cpp
subsystems/assets/: CMakeLists.txt
subsystems/assets/database/: CMakeLists.txt
subsystems/assets/preprocessor/: CMakeLists.txt
subsystems/assets/src/strobe/assets/: AssetManager.cpp  AssetManager.hpp
subsystems/input/: CMakeLists.txt
subsystems/input/sandbox/: CMakeLists.txt  main.cpp
subsystems/input/src/strobe/input/: Action.hpp  InputSystem.cpp  InputSystem.hpp  (+8 more)
subsystems/window/: CMakeLists.txt
subsystems/window/common/: CMakeLists.txt
subsystems/window/impl/: CMakeLists.txt
subsystems/window/impl/glfw/: CMakeLists.txt
subsystems/window/sandbox/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
threading/: CMakeLists.txt
threading/include/strobe/: double_buffered_memory.h  shared_memory_buffer.h
threading/src/doublebuffering/: DoubleBufferedMemory.cpp  DoubleBufferedMemory.h
threading/src/shared_memory_buffer/: CastedReadSharedMemoryBuffer.cpp  CastedReadSharedMemoryBuffer.h  ConstSharedMemoryBuffer.cpp  ConstSharedMemoryBuffer.h  DoubleBufferedSharedMemoryBuffer.cpp  DoubleBufferedSharedMemoryBuffer.h  ReadSharedMemoryBuffer.h  SharedMemoryBuffer.h  SynchronizedSharedMemoryBuffer.cpp  SynchronizedSharedMemoryBuffer.h  WriteSharedMemoryBuffer.h
(+1229 files in other folders)
