set(STROBE_CORE_CONTAINERS_LIB ${STROBE_CORE_LIB}-containers CACHE INTERNAL "")

add_library(${STROBE_CORE_CONTAINERS_LIB} INTERFACE)

target_include_directories(${STROBE_CORE_CONTAINERS_LIB} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${STROBE_CORE_CONTAINERS_LIB} INTERFACE ${STROBE_CORE_MEMORY_LIB})

add_subdirectory(test)
