set(STROBE_CORE_SYNC_LIB ${STROBE_CORE_LIB}-sync CACHE INTERNAL "")


add_library(${STROBE_CORE_SYNC_LIB} INTERFACE)


target_include_directories(${STROBE_CORE_SYNC_LIB} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${STROBE_CORE_SYNC_LIB} INTERFACE ${STROBE_CORE_MEMORY_LIB})

set(COMPILER_ID "${CMAKE_CXX_COMPILER_ID}")
if (COMPILER_ID STREQUAL "GNU" OR COMPILER_ID STREQUAL "Clang")
    target_link_libraries(${STROBE_CORE_SYNC_LIB} INTERFACE atomic)
endif()

add_subdirectory(test)
