set(STROBE_CORE_EVENTS_TESTS ${STROBE_CORE_EVENTS_LIB}-test)
set(STROBE_CORE_EVENTS_TESTS_EXEC ${STROBE_CORE_EVENTS_TESTS}-exec)

enable_testing()

add_library(${STROBE_CORE_EVENTS_TESTS} 
  OBJECT EXCLUDE_FROM_ALL
  ${CMAKE_CURRENT_SOURCE_DIR}/EventDispatcher.cpp
)

target_compile_options(${STROBE_CORE_EVENTS_TESTS} PUBLIC -g -O0)

target_link_googletest(${STROBE_CORE_EVENTS_TESTS} PUBLIC)

target_link_libraries(${STROBE_CORE_EVENTS_TESTS} PUBLIC ${STROBE_CORE_EVENTS_LIB})
target_link_libraries(${STROBE_CORE_EVENTS_TESTS} PUBLIC ${STROBE_CORE_CONTAINERS_LIB})

set_property(GLOBAL APPEND PROPERTY STROBE_TEST_LIBS ${STROBE_CORE_EVENTS_TESTS})

add_executable(${STROBE_CORE_EVENTS_TESTS_EXEC} EXCLUDE_FROM_ALL
  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

target_link_libraries(${STROBE_CORE_EVENTS_TESTS_EXEC} PRIVATE ${STROBE_CORE_EVENTS_TESTS})


