set(STROBE_CORE_EVENTS_TESTS ${STROBE_CORE_EVENTS_LIB}-test)

enable_testing()

add_executable(${STROBE_CORE_EVENTS_TESTS} EXCLUDE_FROM_ALL
  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/EventDispatcher.cpp
)

target_link_googletest(${STROBE_CORE_EVENTS_TESTS} PUBLIC)

target_link_libraries(${STROBE_CORE_EVENTS_TESTS} PUBLIC ${STROBE_CORE_EVENTS_LIB})
target_link_libraries(${STROBE_CORE_EVENTS_TESTS} PUBLIC ${STROBE_CORE_CONTAINERS_LIB})

strobe_discover_tests(${STROBE_CORE_EVENTS_TESTS}) 

